syncs mongo-db-source-to-google-sheets-destination-user-account changed in Hightouch

--- a/syncs/mongo-db-source-to-google-sheets-destination-user-account.yaml
+++ b/syncs/mongo-db-source-to-google-sheets-destination-user-account.yaml
@@ -29,7 +29,7 @@ config:
       type: standard
     - to: _id
       type: variable
-      variable: current-timestamp
+      variable: operation
   sheetName: Sheet1
   configVersion: 2
   overrideConfig: {}
