Update source and destination manifest

--- a/manifest-andrews-test-workspace.yaml
+++ b/manifest-andrews-test-workspace.yaml
@@ -39,6 +39,9 @@ sources:
     name: Airtable Source
     type: airtable
 destinations:
+  http-request:
+    name: HTTP Request
+    type: webhookV2
   mongo-db-destination:
     name: MongoDBDestination
     type: mongodb
